--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -116,10 +116,11 @@ adult sponsers
                       <div>
                         <h5 style = "float:left;" > Logan Reed | New York University</h5>
                         <hr style="height:20pt; visibility:hidden;" />
-                        <p style="float: left;"><img class= "claire" src="../../assets/images/mina-lee.jpg" ></p>
+                        <p style="float: left;"><img class= "claire" src="../../assets/images/logan-reed.jpeg" ></p>
                           <p>
-                              Logan Bio
-                          </p>
+                            Logan competed in LD debate for three years for North Crowley High School in Texas. She qualified to TFA state twice, and received 3 bids to the TOC. In her senior year, she won St. James and was a finalist at Strake. She currently is a first-year college policy debater at NYU, where she has reached elimination rounds of several tournaments in both open and JV divisions. She also coaches several independent debaters across the country. Her debate interests include the intersection of race and queerness, (trans)gender studies, disability studies, and postmodern philosophy.
+
+                        </p>
                       </div>
           </div>
         </div>
