--- a/src/app/mentors/mentors.component.html
+++ b/src/app/mentors/mentors.component.html
@@ -181,7 +181,65 @@
                   </li>
 
               </ul>
-              
+              <br>
+              <ul id="rig">
+                <li>
+                    <a class="rig-cell" >
+                        <img class="rig-img" src="../../assets/images/meghana-srinivasa.png" />
+                        <span class="rig-overlay"></span>
+                        <span class="rig-text">
+
+                            <u>Meghana Srinivasa, Lake Highland Prep (FL) </u><br><br>
+                            <p class="small-text">
+                                Meghana Srinivasa is a junior at Lake Highland Preparatory School and has competed on the national circuit for LD. She enjoys working with her current novices and teammates, and she looks forward to mentoring debaters from different schools across the country that do not have access to the same resources as larger programs.
+                        </span>
+                    </a>
+                </li>
+                <li>
+                    <a class="rig-cell" >
+                        <img class="rig-img" src="../../assets/images/serena-lyou.jpg" />
+                        <span class="rig-overlay"></span>
+                        <span class="rig-text">
+
+                            <u>Serena Lyou, Lake Highland Prep (FL) </u><br><br>
+                            <p class="small-text">
+                                Serena Lyou is a junior at Lake Highland who has been debating since her freshman year. Serena is excited to be a mentor because she recognizes the importance of women having female role models who can offer moral support in the male-dominated debate community. She understands how it can sometimes be uncomfortable for women to work with guys, so she wants to make sure everyone can have access to a female mentor when needed.
+
+                        </span>
+                    </a>
+                </li>
+                <li>
+                    <a class="rig-cell">
+                        <img class="rig-img" src="../../assets/images/jaya-dayal.jpg" />
+                        <span class="rig-overlay"></span>
+                        <span class="rig-text">
+
+                            <u>Jaya Dayal, Lake Highland Prep (FL) </u><br><br>
+                            <p class="small-text">
+                                Marguerite is a senior who has been debating since her freshman year. She had success in her local circuit including a 9th place finish at MN state, but in the last year has expanded to national circuit debate. She loves to teach younger students and wants to bring national circut debate to students who may not have access. She goes to a smaller school but has been lucky in gaining national circut skills, that she can’t wait to share with the next generation of debaters.                              </p>
+
+                        </span>
+                    </a>
+                </li>
+                <!-- 
+                <li>
+                    <a class="rig-cell" >
+                        <img class="rig-img" src="../../assets/images/lauren-gilbert.png" />
+                        <span class="rig-overlay"></span>
+                        <span class="rig-text">
+
+                            <u>Lauren Gilbert, WDM Valley (IA)) </u><br><br>
+                            <p class="small-text">
+                                Lauren Gilbert is a junior at Valley High School. She has consistently competed on the national circuit and is an active member on her school's debate team. Lauren is excited to be working as a mentor in order to help encourage greater involvement of women within debate, and to help all women feel included within the activity.                               </p>
+
+                        </span>
+                    </a>
+                </li>
+                -->
+
+            </ul>
+            <br>
+            
 
 
 
