--- a/src/app/resources/resources.component.html
+++ b/src/app/resources/resources.component.html
@@ -11,7 +11,7 @@ resources
 
         
         <div>
-            <a>
+            <a href="https://www.dropbox.com/s/9rtfdw3i5grc4yx/bell-hooks-card-file-windebate.docx?dl=0">
           <img class="sylvia" src="../../assets/images/bell-hooks.jpg">
           <p></p>
           <p>Bell Hooks File</p>
