SPONSORS WAS SPELLED WRONG

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -76,7 +76,7 @@ Julia Wu is a senior at Lake Highland Preparatory School in Florida. After being
                     Amy is a rising sophomore at Brown University. She debated throughout high school and now debates as a part of the Brown Debating Union. She was astonished to find the distinct efforts in inclusion and diversity from the college debating circuit, realizing the rampant sexism she experienced should not be passively accepted. She truly appreciates the close friendships she currently has with older female mentors. Pursuing a career in computer science, she hopes to use what she's learned to bridge the gaps facing other debaters today.                    </p>
                 </div>
               <div class="who-we-are-header">
-adult sponsers
+adult sponsors
                   <hr style="height: 3px; width: 25%; background-color: #3c3059">
                   <hr style="height: 2px; width: 15%; background-color: #84b7b1">
 
