--- a/src/app/mentees/mentees.component.html
+++ b/src/app/mentees/mentees.component.html
@@ -1,108 +1,125 @@
 <section class="mentees-page-top">
-    <div class="container">
-      <div class="row">
-        <div class="col">
-            <div class="mentees-header" style="color: white;">
-              mentees
-              <hr style="height: 3px; width: 25%; background-color: #3c3059">
-              <hr style="height: 2px; width: 15%; background-color: #84b7b1">
-            </div>
-            </div>
-            </div>
-            </div>
-          </section>
-          
-          <section class="mentees-page">
-              <div class="container">
-                  <div class="row">
-                    <div class="col">
-            <h1 class="title">
-                <br>
-              As a mentee, you will:
-            </h1>
-            <ul class="list" > 
-              <li> <b class="special"> Improve your debating skills </b> by working with our mentors on speeches, cases, and content. </li>
-              <li> 
-                <b class="special"> Access all of W.in Debate’s resources </b> such as card files and cases. </li>
-              <li> 
-               <b class="special"> Be part of a network of intelligent and accepting women</b> that will support you, both inside and outside of debate.</li>
-            </ul>
-            <div style="text-align: center">
-              <button class="signup-button" (click)="openSignup()">Become a mentee!</button>
-            </div>
-            <div class="mentees-header">
-              FAQ
-              <hr style="height: 3px; width: 25%; background-color: #3c3059">
-              <hr style="height: 2px; width: 15%; background-color: #84b7b1">
-            </div>
-            <h1 class="title">
-            How does the program work?
-            </h1>
-            <ul class= "list" style="list-style-type:none">
-              <li>
-                After prospective mentees fill out our Google Application Form, W.in Debate will match them with mentors in their region that have similar debating styles and interests. All of our mentors have had a track record of success in debate, and they were chosen because of their outstanding character and commitment to helping others. Mentees will then receive an email with their assigned mentor and their contact information when the matching process is complete. From there, mentees will be able to schedule video-chat sessions with their mentors to work on any debate skill of their choosing. 
-              </li>
-            </ul>
-            <h1 class="title">
-              How much does it cost?
-            </h1>
-            <ul class= "list" style="list-style-type:none">
-              <li>Nothing!               
-              </li>
-            </ul>
-            <h1 class="title">
-              How do I schedule meetings with my mentor?
-            </h1>
-           
-              <ul class= "list" style="list-style-type:none">
-                <li>Each week, our mentors will input the times that they are available to work with mentees on our shared Google Calendar. Mentees can access this Google Calendar from the W.in Debate website. From there, mentees will contact the mentors they wish to work with to schedule video-chat sessions.
-                </li>
-              </ul>
-                                
-                                  <h1 class="title">
-                                      Can I join the program if I am not a woman?
-                                    </h1>
-                                    <ul class= "list" style="list-style-type:none">
-                                        <li>                                       Our program is open to any debater who is not a man. This includes people who are nonbinary, trans, or gender fluid.
-           
-                                          </li>
-                                      </ul>
-                                      <h1 class="title">
-                                          I participate in Policy Debate/Public Forum Debate/another format of debate besides Lincoln-Douglas. Can I join the program?
-                                        </h1>
-                                        <ul class= "list" style="list-style-type:none">
-                                            <li>                    You are free to join the program so long as you are not a man, but unfortunately, all of our mentors at this time only have experience in Lincoln-Douglas Debate. 
-             
-                                              </li>
-                                          </ul>
-                                        <h1 class="title">
-                                            How do I communicate with my mentor?
-                                          </h1>
-                                          <ul class= "list" style="list-style-type:none">
-                                              <li>                    When you receive your mentor assignment, you will also receive your mentor’s email. If you and your mentor decide that you would like to communicate over another medium (text, Facebook Messenger, etc.) you are free to do so.
-      
-                                                </li>
-                                            </ul>
-                                          <h1 class="title">
-                                              Can I work with other mentors that I am not assigned?
-                                            </h1>
-                                            <ul class= "list" style="list-style-type:none">
-                                                <li>                     Yes! You are able to work with any mentor of your choosing. Mentor/mentee pairs are only a starting point for new members to get acquainted with one another.
-              
-                                                  </li>
-                                              </ul>
-                                            <h1 class="title">
-                                                Are mentees required to do debate work with their mentors?
-                                              </h1>
-                                              <ul class= "list" style="list-style-type:none">
-                                                  <li>                     No. If mentees only wish to discuss concerns or grievances with their mentor, they are free to do so.            
-                                                    </li>
-                                                </ul>
-                  
-                
-          
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="mentees-header" style="color: white;">
+          mentees
+          <hr style="height: 3px; width: 25%; background-color: #3c3059">
+          <hr style="height: 2px; width: 15%; background-color: #84b7b1">
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+          
+<section class="mentees-page">
+  <div class="container">
+    <div class="row">
+      <div class="col" style="padding-left: 13%;
+      padding-right: 13%;">
+        <h1 class="title">
+            <br>
+          As a mentee, you will:
+        </h1>
+        <ul class="list"> 
+          <li> <b class="special"> Improve your debating skills </b> by working with our mentors on speeches, cases, and content. </li>
+          <li> 
+            <b class="special"> Access all of W.in Debate’s resources </b> such as card files and cases. </li>
+          <li> 
+            <b class="special"> Be part of a network of intelligent and accepting women</b> that will support you, both inside and outside of debate.</li>
+        </ul>
+        <div style="text-align: center">
+          <button class="signup-button" (click)="openSignup()">Become a mentee!</button>
+        </div>
+        <div class="mentees-header">
+          FAQ
+          <hr style="height: 3px; width: 25%; background-color: #3c3059">
+          <hr style="height: 2px; width: 15%; background-color: #84b7b1">
+        </div>
+        <h1 class="title">
+         How does the program work?
+        </h1>
+        <!-- <ul class= "list" style="list-style-type:none">
+          <li> -->
+            <p> 
+            After prospective mentees fill out our Google Application Form, W.in Debate will match them with mentors in their region that have similar debating styles and interests. All of our mentors have had a track record of success in debate, and they were chosen because of their outstanding character and commitment to helping others. Mentees will then receive an email with their assigned mentor and their contact information when the matching process is complete. From there, mentees will be able to schedule video-chat sessions with their mentors to work on any debate skill of their choosing. 
+            </p>
+            <!-- </li> -->
+        <!-- </ul> -->
+        <h1 class="title">
+          How much does it cost?
+        </h1>
+        <!-- <ul class= "list" style="list-style-type:none">
+          <li> -->
+          <p>
+            Nothing!  
+          </p>             
+          <!-- </li>
+        </ul> -->
+        <h1 class="title">
+          How do I schedule meetings with my mentor?
+        </h1>
+      
+        <!-- <ul class= "list" style="list-style-type:none">
+          <li> -->
+          <p>
+            Each week, our mentors will input the times that they are available to work with mentees on our shared Google Calendar. Mentees can access this Google Calendar from the W.in Debate website. From there, mentees will contact the mentors they wish to work with to schedule video-chat sessions.
+          </p>
+          <!-- </li>
+        </ul> -->
+                            
+        <h1 class="title">
+          Can I join the program if I am not a woman?
+        </h1>
+        <!-- <ul class= "list" style="list-style-type:none">
+          <li> -->
+          <p>
+            Our program is open to any debater who is not a man. This includes people who are nonbinary, trans, or gender fluid.
+          </p>
+            <!-- </li>
+        </ul> -->
+        <h1 class="title">
+          I participate in Policy Debate/Public Forum Debate/another format of debate besides Lincoln-Douglas. Can I join the program?
+        </h1>
+        <!-- <ul class= "list" style="list-style-type:none">
+          <li> -->
+          <p>
+            You are free to join the program so long as you are not a man, but unfortunately, all of our mentors at this time only have experience in Lincoln-Douglas Debate. 
+          </p>
+          <!-- </li>
+        </ul> -->
+        <h1 class="title">
+          How do I communicate with my mentor?
+        </h1>
+        <!-- <ul class= "list" style="list-style-type:none">
+          <li> -->
+          <p>
+            When you receive your mentor assignment, you will also receive your mentor’s email. If you and your mentor decide that you would like to communicate over another medium (text, Facebook Messenger, etc.) you are free to do so.
+          </p>
+          <!-- </li>
+        </ul> -->
+        <h1 class="title">
+          Can I work with other mentors that I am not assigned?
+        </h1>
+        <!-- <ul class= "list" style="list-style-type:none">
+          <li> -->
+          <p>
+            Yes! You are able to work with any mentor of your choosing. Mentor/mentee pairs are only a starting point for new members to get acquainted with one another.
+          </p>
+          <!-- </li>
+        </ul> -->
+        <h1 class="title">
+          Are mentees required to do debate work with their mentors?
+        </h1>
+        <!-- <ul class= "list" style="list-style-type:none">
+          <li> -->
+          <p>
+            No. If mentees only wish to discuss concerns or grievances with their mentor, they are free to do so.            
+          </p>
+          <!-- </li>
+        </ul> -->
+      </div>
+    </div>
+  </div>
+</section>
   
