--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
-@media (min-width: 1025px){
-    main {
-        padding-top: 8rem;     
-    }
+/* @media (min-width: 1025px){ */
+main {
+    padding-top: 8rem;     
 }
+/* } */
