--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,11 +2,10 @@
     <div class="container">
       <div class="row">  
         <div class="col">
-          <div class= "win-debate-header" style="color: white; margin-top: 3rem;">
+          <div class="win-debate-header">
               <div>w.in</div>
               <div>debate</div>
           </div>
-          
         </div>
        </div> 
     </div>
