fixed jayas bio

--- a/src/app/mentors/mentors.component.html
+++ b/src/app/mentors/mentors.component.html
@@ -216,8 +216,7 @@
 
                             <u>Jaya Dayal, Lake Highland Prep (FL) </u><br><br>
                             <p class="small-text">
-                                Marguerite is a senior who has been debating since her freshman year. She had success in her local circuit including a 9th place finish at MN state, but in the last year has expanded to national circuit debate. She loves to teach younger students and wants to bring national circut debate to students who may not have access. She goes to a smaller school but has been lucky in gaining national circut skills, that she can’t wait to share with the next generation of debaters.                              </p>
-
+TBD!
                         </span>
                     </a>
                 </li>
