added router navigation to katie's article

--- a/src/app/katie/katie.component.html
+++ b/src/app/katie/katie.component.html
@@ -3,14 +3,15 @@
     <div class="row">
       <div class="col">
           <div class="lindsey-article-header" style="color: black;">
-Sick Woman Lecture            <p class="small">
-              Katie Raphaelson 
-            </p>
+              Sick Woman Lecture
+              <p class="small">
+                Katie Raphaelson 
+              </p>
             <hr style="height: 3px; width: 25%; background-color: #3c3059">
             <hr style="height: 2px; width: 15%; background-color: #84b7b1">
           </div>
-          </div>
-          </div>
-          </div>
-          </section>
+        </div>
+      </div>
+    </div>
+  </section>
           
