finished sick woman theory

--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -22,9 +22,9 @@
   
                   <li>
                       <a class="rig-cell" (click)="openKatie()">
-                          <img class="rig-img" src="../../assets/images/lindsey-article-image.jpg" />
+                          <img class="rig-img" src="../../assets/images/katie-raph.JPG" />
                           <span class="rig-overlay"></span>
-                          <span class="rig-text">Fighting for a Place at the Front by Lindsey Perlman
+                          <span class="rig-text">Sick Woman Theory by Katie Raphaelson
                           </span>
                       </a>
                     
