--- a/src/app/katie/katie.component.html
+++ b/src/app/katie/katie.component.html
@@ -1,8 +1,8 @@
-<section class="lindsey-page-top">
+<section class="katie-top">
   <div class="container">
     <div class="row">
       <div class="col">
-          <div class="lindsey-article-header" style="color: black;">
+          <div class="katie-header" style="color: black;">
               Sick Woman Lecture
               <p class="small">
                 Katie Raphaelson 
@@ -10,7 +10,12 @@
             <hr style="height: 3px; width: 25%; background-color: #3c3059">
             <hr style="height: 2px; width: 15%; background-color: #84b7b1">
           </div>
-        </div>
+        <div > 
+      
+          <iframe class="video" src="https://player.vimeo.com/video/286823240" width="640" height="360" frameborder="0"  webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        
+</div>
+</div>
       </div>
     </div>
   </section>
