--- a/src/app/katie/katie.component.css
+++ b/src/app/katie/katie.component.css
@@ -14,6 +14,13 @@
     color:black;
 }
 */
+iframe {
+    display: block;
+    width: 800px;
+    height: 400px;
+    margin: 0 auto;
+    border: 0;
+}
 .special{
     color: rgb(95, 69, 145);}
 
