--- a/src/app/katie/katie.component.html
+++ b/src/app/katie/katie.component.html
@@ -12,7 +12,7 @@
           </div>
         <div > 
       
-          <iframe class="video" src="https://player.vimeo.com/video/286823240" width="640" height="360" frameborder="0"  webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          <iframe src="https://player.vimeo.com/video/286823240" width="640" height="360" frameborder="0"  webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         
 </div>
 </div>
