added linseys second article

--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -22,13 +22,22 @@
   
                   <li>
                       <a class="rig-cell" (click)="openKatie()">
-                          <img class="rig-img" src="../../assets/images/katie-raph.JPG" />
+                          <img class="rig-img" src="../../assets/images/katie-raph.jpg" />
                           <span class="rig-overlay"></span>
                           <span class="rig-text">Sick Woman Theory by Katie Raphaelson
                           </span>
                       </a>
                     
                   </li>
+                  <li>
+                    <a class="rig-cell" (click)="openLindseyArticle2()">
+                        <img class="rig-img" src="../../assets/images/lindsey-article-image.jpg" />
+                        <span class="rig-overlay"></span>
+                        <span class="rig-text">Arrogance in Debate: A Rite of Passage
+                            by Lindsey Perlman
+                        </span>
+                    </a>  
+                </li>
                   </ul>
              
               
