--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -22,7 +22,7 @@
   
                   <li>
                       <a class="rig-cell" (click)="openKatie()">
-                          <img class="rig-img" src="../../assets/images/katie-raph.jpg" />
+                          <img class="rig-img" src="../../assets/images/katie-raph.JPG" />
                           <span class="rig-overlay"></span>
                           <span class="rig-text">Sick Woman Theory by Katie Raphaelson
                           </span>
