--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,8 @@
     </div>
  </section>
 
- <section class="who-we-are-page">
+<section class="who-we-are-page">
+  
       <div class="container">
         <div class="row">
           <div class="col">
@@ -123,6 +124,13 @@ adult sponsors
                       </div>
           </div>
         </div>
+
       </div>
+      <br>
+      <p style="text-align:center;">
+	**Special thanks to Megan Wu for the organization name and logo design!
+</p>
+	<br>
+      <br>
     </section> 
-    
+
